# enumex

./: CHANGELOG.md  README.md  pyproject.toml
Examples/: example1.py  example2.py  example3.py
Test/: test_enumex.py  test_enumex_pickle.py
enumex/: __init__.py  enumex.py
