[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "enumex"
version = "3.9.7"
description = "An extension to the standard enum with polymorphism, and abstract methods."
readme = "README.md"
license = "Python-2.0"
authors = [{ name = "Addio" }]
requires-python = ">=3.9.7,<3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/AddioElectronics/enumex"
Repository = "https://github.com/AddioElectronics/enumex"
Documentation = "https://github.com/AddioElectronics/enumex#readme"
Changelog = "https://github.com/AddioElectronics/enumex/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
exclude = ["Test*", "Examples*"]

[tool.pytest.ini_options]
python_files = "test_*.py"
norecursedirs = "enumex Examples"
filterwarnings = [
    "ignore::DeprecationWarning"
]